# mclaude-hub

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
_inbox/: README.md
docs/: architecture.md
mclaude_hub/: __init__.py
mclaude_hub/audio/: __init__.py  base.py  capture.py  registry.py  stt_faster_whisper.py  stubs.py  tts_pyttsx3.py
mclaude_hub/bridge/: __init__.py  client.py
mclaude_hub/client/: __init__.py  app.py
mclaude_hub/common/: __init__.py  models.py
mclaude_hub/hub/: __init__.py  server.py  store.py
project-kb/: README.md  scaffold.py
project-kb/claude-rules/: knowledge-base.md
project-kb/examples/retouch-app/: mkdocs.yml
project-kb/examples/retouch-app/docs/: _ARTICLE.md  index.md  llms.txt
project-kb/examples/retouch-app/docs/converter/: index.md
project-kb/examples/retouch-app/docs/engine/: index.md
project-kb/examples/retouch-app/docs/plugin/: index.md
project-kb/examples/retouch-app/docs/server/: index.md
project-kb/examples/retouch-app/docs/tools/: index.md
tests/: conftest.py  test_common_models.py
tests/audio/: test_audio.py  test_capture.py  test_stt_faster_whisper.py  test_tts_pyttsx3.py
tests/bridge/: test_bridge.py
tests/hub/: test_server.py  test_store.py
