[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mclaude-hub"
version = "0.1.0"
description = "Network + desktop + audio layer for mclaude: hub server, tray client, STT/TTS, Claude bridge"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "claude", "claude-code", "ai-agents", "collaboration",
    "notification", "voice", "stt", "tts", "multi-session",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Communications",
]

dependencies = [
    # Hub + bridge need HTTP and schema validation
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "httpx>=0.26",
    # Local layer
    "mclaude>=0.2.0",
]

[project.optional-dependencies]
client = [
    "PyQt6>=6.5",
    "plyer>=2.1",
    "pynput>=1.7",  # hotkey listener
]
audio-stt = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
]
audio-tts = [
    "pyttsx3>=2.90",
]
audio-full = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "pyttsx3>=2.90",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",  # also used by TestClient
    "ruff>=0.3",
]

[project.scripts]
mclaude-hub = "mclaude_hub.hub.server:_cli_main"

[project.urls]
Homepage = "https://github.com/AnastasiyaW/mclaude-hub"
Repository = "https://github.com/AnastasiyaW/mclaude-hub"
Issues = "https://github.com/AnastasiyaW/mclaude-hub/issues"

[tool.hatch.build.targets.wheel]
packages = ["mclaude_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
